media/sonarr/sonarr-ingressroute.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-dashboard-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tv.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tv.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
